# baby-data-app-2025

./: .gitignore  CLAUDE.md  HOW_TO_RUN.md  Implementation.md  README.md  main.py  project_overview.md  pyproject.toml
backend/: .env  .env.example  README.md  alembic.ini  check_feedings.py  niki_talks_to_db.ipynb  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: analytics.py  babies.py  diaper.py  feeding.py  growth.py  health.py  sleep.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  baby.py  base.py  diaper.py  feeding.py  growth.py  health.py  sleep.py
backend/app/schemas/: __init__.py  analytics.py  baby.py  base.py  diaper.py  feeding.py  growth.py  health.py  sleep.py
backend/app/services/: __init__.py  analytics_service.py  base.py
backend/app/tests/test_schemas/: __init__.py  test_analytics.py  test_base.py  test_diaper.py  test_feeding.py  test_sleep.py
backend/app/tests/test_services/: test_base.py
backend/migrations/: env.py
backend/migrations/versions/: 51bb61fc6576_initial_migration_with_all_baby_data_.py  546e84d92642_rename_sleep_columns.py  749d47acf640_remove_duration_minutes_computed_fields_.py  c5eb3f5c55fe_add_updated_at_to_event_tables.py  e7a91b4c2d58_add_source_column_to_all_tables.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  router.tsx
nikis_files/: api_testing.ipynb  niki_talks_to_db.ipynb  test_all_endpoints.py
plans/active/: pydantic-schema-refactoring.md
plans/completed/: frontend-routes.md
(+13 files in other folders)
